# plugwerk-server/plugwerk-server-backend/src/main/kotlin/io/plugwerk/server/service/Pf4jCompatibilityService.kt
@@ -59,7 +59,7 @@ class Pf4jCompatibilityService(
                 Pf4jPluginInfo(
                     id = plugin.pluginId,
                     description = plugin.description,
-                    provider = plugin.author,
+                    provider = plugin.provider,
                     projectUrl = plugin.homepage,
                     releases = releases,
                 )
